<resources>
    <string name="app_name">Test App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_view">Hello</string>
    <string name="edit_text_name_hint">Enter your name</string>
    <string name="text_edit_password_hint">Enter password</string>
    <string name="register_welcome_text">Welcome</string>
    <string name="register_confirm_button">Confirm</string>
    <string name="register_first_name_hint">First name</string>
    <string name="register_second_name_hint">Second name</string>
    <string name="register_login_hint">Login</string>
    <string name="register_password_hint">Enter password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="login_confirm_button">Connect</string>
    <string name="incorrect_data">Username or password entered incorrectly</string>
    <string name="user_already_registered">This nickname is already taken. Choose another</string>
    <string name="empty_field">Empty field</string>
    <string name="passwords_unconfirmed">Passwords must be the same</string>
    <string name="stub_text_loading">Loading...</string>
    <string name="log_out">Log out</string>
    <string name="tests_screen">TestsScreen</string>
    <string name="test_1">Test 1</string>
    <string name="description">Description</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="exit_msg_title">Are u sure for exit?</string>

    <string-array name="tab_strings">
        <item>Login</item>
        <item>Registration</item>
    </string-array>
</resources>