<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.onix.internship.survay.ui.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/login_layout_padding"
        tools:context=".ui.auth.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/login_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_view"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/login_password_container"
            app:layout_constraintHorizontal_bias="0.5"
            app:showError="@{viewModel.loginError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_welcome_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_name_field"
                android:text="@={viewModel.model.login}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_name_hint"
                android:background="@color/white"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/login_confirm_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:showError="@{viewModel.passwordError}"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_name_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_field"
                android:text="@={viewModel.model.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="@string/text_edit_password_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_confirm_button"
            android:text="@string/login_confirm_button"
            android:onClick="@{()->viewModel.onClickConnect()}"
            app:layout_constraintBottom_toBottomOf="@+id/login_guide_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_container"
            style="@style/connect_button_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>