<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.onix.internship.survay.ui.auth.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_guide_line_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_guide_line_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/register_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/register_welcome_text"
            android:textSize="@dimen/register_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_first_name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/register_margin_guideline_vertical"
            app:showError="@{viewModel.nameError}"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/register_login_container"
            app:layout_constraintEnd_toStartOf="@+id/register_guide_line_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_welcome_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_first_name_field"
                android:text="@={viewModel.model.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/register_first_name_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_second_name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:showError="@{viewModel.surnameError}"
            android:layout_marginStart="@dimen/register_margin_guideline_vertical"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/register_login_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/register_guide_line_vertical"
            app:layout_constraintTop_toBottomOf="@+id/register_welcome_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_second_name_field"
                android:text="@={viewModel.model.surname}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/register_second_name_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_login_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:showError="@{viewModel.usernameError}"
            app:layout_constraintBottom_toTopOf="@+id/register_password_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_second_name_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_login_field"
                android:text="@={viewModel.model.username}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/register_login_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:showError="@{viewModel.passwordError}"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_password_confirm_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_login_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_field"
                android:text="@={viewModel.model.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/register_password_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_confirm_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:showError="@{viewModel.passwordConfirmError}"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/register_confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_confirm_field"
                android:text="@={viewModel.model.passwordConfirm}"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/register_confirm_password_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_confirm_button"
            android:text="@string/register_confirm_button"
            android:onClick="@{()->viewModel.onClickConfirm()}"
            app:layout_constraintBottom_toBottomOf="@+id/register_guide_line_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_confirm_container"
            style="@style/connect_button_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


